--- a/index.html
+++ b/index.html
@@ -67,9 +67,21 @@
             <div class="col-md-5 mb-4" id="contenedor-merch">
 
                 <p class="mbr-text pt-3 mbr-fonts-style display-7 text-left"><strong>Productores agropecuarios ahora pueden financiarse con un crédito de hasta $3.000.000 de forma ágil, con aprobación en pocos pasos y en todo el país.</strong></p>
-                    <div>
-                    <img src="assets/images/circulos.png" alt="Promos" >
-                    </div>
+               
+               
+
+                <div class="container-fluid">
+                                <div class="col-md-12">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <img src="assets/images/circulos.png" alt="Promos" >
+                                        </div>
+                                        <div class="col-md-6 justify-content-center align-self-center">
+                                            <h6>Destino: <br> Inversión y capital de trabajo</h6>
+                                        </div>
+                                    </div>
+                </div>
+            </div>
                 <div class="align-left">
 
                     <p class="mbr-text pt-3 mbr-fonts-style display-7 text-left"><strong>¡Ingresá ahora y descubrí una solución a la altura de las necesidades de tu negocio!</strong></p>
