--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 </section>
 
 <section class="header2 cid-sk">
-    <image src="assets/images/gastronomicos_375px_mobile.jpg"></image>
-</section>
+    <image src="assets/images/lineafrescos_375x200.jpg"></image>
+</section> 
 
 <section class="header2 cid-saNWaZyi4k mbr-fullscreen mbr-parallax-background" id="header2-q">
-    <div class="container mt-5">
+    <div class="container mt-1">
         <div class="row">
 
             <div class="col-md-7">
@@ -70,7 +70,7 @@
 
             <div class="col-md-5 mb-4" id="contenedor-merch">
 
-                <p class="mbr-text pt-3 mbr-fonts-style display-7 text-left"><strong>Productores agropecuarios ahora pueden financiarse con un crédito de hasta $3.000.000 de forma ágil, con aprobación en pocos pasos y en todo el país.</strong></p>
+                <p class="mbr-text pt-1 mbr-fonts-style display-7 text-left"><strong>Productores agropecuarios ahora pueden financiarse con un crédito de hasta $3.000.000 de forma ágil, con aprobación en pocos pasos y en todo el país.</strong></p>
                
                
 
@@ -78,7 +78,7 @@
                                 <div class="col-md-12">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <img src="assets/images/circulos.png" alt="Promos" >
+                                            <img id="circulostasa" style="width: 75%;" src="assets/images/circulos.png" alt="Promos" >
                                         </div>
                                         <div class="col-md-6 justify-content-center align-self-center">
                                             <h6>Destino: <br> Inversión y capital de trabajo</h6>
